# Splithunter

./: .gitignore  .gitmodules  .travis.yml  BuildDB.cpp  Makefile  README.md  Splithunter.cpp  pyproject.toml  rm_submodules.sh  setup.py  splithunter.py  splithunter_report.py  tests.py
.github/workflows/: ci.yml
data/: IGH.bwt  IGH.pac  IGK.ann  IGK.bwt  IGL.ann  IGL.pac  IGL.sa  TRA.pac  TRB.amb  TRB.ann  TRB.bwt  TRB.pac  TRB.sa  TRG.pac  TRG.sa
docker/: Makefile  splithunter.dockerfile  update_package.sh
docs/: tcell_example_report.html  trec_report.html
pysrc/: utils.py
rust/: Cargo.toml  build.rs
rust/src/: bwa_ffi.rs  coverage.rs  entropy.rs  lib.rs  realign.rs  split.rs
splithunter/: __init__.py  loci.py  report.py  run.py  tcell.py  utils.py
splithunter/data/: tcra_exons_hg38.bed
src/: BuildDB.cpp  Makefile  Splithunter.cpp  install.sh
src/bedFile/: Makefile  bedFile.cpp
src/data/: IGH.amb  IGH.ann  IGH.sa  IGK.amb  IGK.pac  IGK.sa  IGL.amb  IGL.bwt  TRA.amb  TRA.ann  TRA.bwt  TRA.sa  TRG.amb  TRG.ann  TRG.bwt  TR_IG.bed
tests/: NA12878.bam.bai  NA12878.json  samples.csv  test_splithunter.py
tests/fixtures/: tcra_exons_hg19.bed  tcra_seg_hg19.csv  tcra_seg_hg38.csv
