[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "splithunter"
version = "0.8.0"
description = "Identify split reads and read pairs in a particular region"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Haibao Tang", email = "tanghaibao@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "pandas",
]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
splithunter_run = "splithunter.run:main"
splithunter_report = "splithunter.report:main"

[project.urls]
Homepage = "https://github.com/tanghaibao/splithunter"

[tool.setuptools]
packages = ["splithunter"]
include-package-data = true

[tool.setuptools.package-data]
splithunter = ["data/*"]
