[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "splithunter"
version = "0.9.0"
description = "V(D)J split-read and coverage-based T-cell fraction caller"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Haibao Tang", email = "tanghaibao@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "pandas",
]

[project.optional-dependencies]
test = ["pytest", "pysam"]

[project.scripts]
splithunter_run = "splithunter.run:main"
splithunter_report = "splithunter.report:main"
splithunter_tcell = "splithunter.tcell:main"

[project.urls]
Homepage = "https://github.com/tanghaibao/splithunter"

[tool.maturin]
manifest-path = "rust/Cargo.toml"
python-source = "."
module-name = "splithunter._core"
features = ["pyo3/extension-module"]
include = ["splithunter/data/*"]
